--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.QuizApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#5d2057</item>
-        <item name="colorPrimaryVariant">#8754c0</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">#8754c0</item><![CDATA[
+        ]]><item name="colorOnPrimary">@color/white</item>
         <item name="android:windowFullscreen">true</item> <!-- open in full screen -->
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -13,6 +13,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
     </style>
 
     <style name="Theme.QuizApp.NoActionBar">
@@ -23,6 +24,44 @@
     <style name="Theme.QuizApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.QuizApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="btnStyle" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/black</item>
+        <item name="cornerRadius">@dimen/btn_radius</item>
+        <item name="android:layout_height">@dimen/btn_height</item>
+    </style>
+
+    <style name="titleTextStyle">
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
+    <style name="ErrorTextAppearance" parent="@android:style/TextAppearance">
+        <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/blue1</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="error_appearance" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/blue1</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="InputError" parent="TextAppearance.Design.Error"/>
+    <style name="InputError.Purple">
+        <item name="android:textColor">#ef2958</item>
+    </style>
+
+    <style name="InputAccepted" parent="TextAppearance.Design.Error"/>
+    <style name="InputAccepted.green">
+        <item name="android:textColor">#00c985</item>
+    </style>
+
+    <style name="hello" parent="Widget.AppCompat.Button.Colored"/>
+
+
 
 
 </resources>
